# STM32G030K8T6

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32G030K8.ioc  STM32G030XX_FLASH.ld
Core/Inc/: main.h
Core/Src/: main.c  stm32g0xx_hal_msp.c
Core/app/: README.md  analog_input.c  analog_input.h  analog_output.h  app_main.c  app_main.h
Core/config/: README.md  app_config.c  app_config.h  device_config.c
Core/protocols/: README.md  modbus_rtu.c  modbus_rtu.h  rs485_ll.c  rs485_ll.h
Core/utils/: README.md  debug_log.c
analog_io/: CMakeLists.txt  MIGRATION_PLAN.md  USER_GUIDE.md  toolchain.cmake
analog_io/app/: app_main.c  main.c
analog_io/bsp/: bsp.c  bsp.h
analog_io/components/analog_core/: analog_input.c  analog_output.c  analog_output.h
analog_io/components/modbus_rtu/: modbus_rtu.c  modbus_rtu.h
analog_io/config/: app_config.h  calibration.c  calibration.h  config.h  device_config.h  modbus_map.h
analog_io/drivers/adc/: adc.c  adc.h
analog_io/drivers/dac/: dac.c  dac.h
analog_io/drivers/rs485/: rs485.c  rs485.h
analog_io/platform/mcu/: STM32G030XX_FLASH.ld  stm32g0xx_it.c
analog_io/platform/pal/: debug_log.c  debug_log.h  pal.c  pal.h  rs485_ll.c  rs485_ll.h
analog_io/services/analog_io_service/: analog_io_service.c  analog_io_service.h
analog_io/services/i2c_bus_scan/: i2c_bus_scan.c  i2c_bus_scan.h
analog_io/services/modbus_service/: modbus_service.c  modbus_service.h
analog_io/test/: calibration_test_hook.c  calibration_test_hook.h
cmake/stm32cubemx/: CMakeLists.txt
